# FServer2.0

./: CMakeLists.txt  FClient.cpp  FServer.cpp  POCKET.h  README.md  main.cpp
FServer2_0/: CMakeLists.txt
FServer2_0/install/: win32-64.txt
FServer2_0/source/: CMakeLists.txt
FServer2_0/source/Client/: Client.cpp  Client.hpp  FClient.cpp  FClient.hpp
FServer2_0/source/Client/Servise/: basic.hpp  filter_io.hpp
FServer2_0/source/Server/: FServer.cpp  FServer.hpp  Server.cpp  Server.hpp
FServer2_0/source/Server/IO/: buffer.hpp  io.hpp
FServer2_0/source/Server/Servise/: basic.hpp  filter_io.cpp  filter_io.hpp  pocket.hpp
FServer2_0/testing/: tests_client.cpp  tests_connection.cpp  tests_server.cpp
